--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.38.0",
     "react-native": "0.69.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
